--- a/index.html
+++ b/index.html
@@ -4,19 +4,25 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style2.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
     />
     <link rel="shortcut icon" href="list.png" type="image/x-icon" />
+    <link rel="stylesheet" href="style2.css" />
     <link rel="stylesheet" href="normalize.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@200;300;400;500;600;700;800&family=Great+Vibes&family=Open+Sans:wght@300;400;600;700&display=swap"
+      rel="stylesheet"
+    />
     <script defer src="main2.js"></script>
     <title>TO DO list</title>
   </head>
   <body>
     <!-- start control -->
-    <div class="control">
+    <header class="control">
       <div class="container">
         <i class="bi bi-moon-fill mode" id="moon"></i>
         <i class="bi bi-brightness-high-fill mode" id="sun"></i>
@@ -25,7 +31,7 @@
           <button class="lang" id="arb" lang="arb">ع</button>
         </div>
       </div>
-    </div>
+    </header>
     <!-- end control -->
     <!-- start heading -->
     <div class="heading">
@@ -69,7 +75,11 @@
         </form>
       </div>
     </div>
-
     <!-- end form -->
+    <!-- start footer -->
+    <footer>
+      Made with &#x2764; By <a href="https://www.instagram.com/rahma.bouazza/">Rahma</a>
+    </footer>
+    <!-- end footer -->
   </body>
 </html>
