--- a/index.html
+++ b/index.html
@@ -21,61 +21,49 @@
     <title>TO DO list</title>
   </head>
   <body>
-    <!-- start control -->
-    <header class="control">
-      <div class="container">
-        <i class="bi bi-moon-fill mode" id="moon"></i>
-        <i class="bi bi-brightness-high-fill mode" id="sun"></i>
-        <div class="langs">
-          <button class="lang" id="eng">Eng</button>
-          <button class="lang" id="arb" lang="arb">ع</button>
-        </div>
-      </div>
-    </header>
-    <!-- end control -->
-    <!-- start heading -->
-    <div class="heading">
-      <div class="container">
-        <h1 id="title">TO DO list</h1>
-      </div>
+    <div class="main">
+ <!-- start control -->
+ <header class="control">
+  <div class="container">
+    <i class="bi bi-moon-fill mode" id="moon"></i>
+    <i class="bi bi-brightness-high-fill mode" id="sun"></i>
+    <div class="langs">
+      <button class="lang" id="eng">Eng</button>
+      <button class="lang" id="arb" lang="arb">ع</button>
     </div>
-    <!-- end heading -->
-    <!-- start tasks section -->
-    <section id="section" class="tasks-section">
-      <div class="container">
-        <div class="task">
-          <i class="bi bi-star-fill"></i>
-          <p class="po" id="task1">Task 1</p>
-          <div class="flex">
-            <i class="bi bi-trash"></i>
-            <i class="bi bi-emoji-angry"></i>
-          </div>
-        </div>
-        <div class="task">
-          <i class="bi bi-star-fill"></i>
-          <p class="po" id="task2">Task 2</p>
-
-          <div class="flex">
-            <i class="bi bi-trash"></i>
-            <i class="bi bi-emoji-angry"></i>
-          </div>
-        </div>
-      </div>
-    </section>
-    <!-- start tasks section -->
-    <!-- start form -->
-    <div class="form">
-      <h2 id="title2">What's up ?</h2>
-      <div class="container">
-        <form>
-          <input type=" text" placeholder="write it down mate!!" />
-          <button type="submit" class="submit">
-            <i class="bi bi-upload"></i>
-          </button>
-        </form>
-      </div>
+  </div>
+</header>
+<!-- end control -->
+<!-- start heading -->
+<div class="heading">
+  <div class="container">
+    <h1 id="title">TO DO list</h1>
+  </div>
+</div>
+<!-- end heading -->
+<!-- start form -->
+<div class="form">
+  <div class="container">
+    <form>
+      <input type=" text" placeholder="write it down mate!!" />
+      <button type="submit" class="submit">
+        <i class="bi bi-upload"></i>
+      </button>
+    </form>
+  </div>
+</div>
+<!-- end form -->
+ <!-- start tasks section -->
+ <section id="section" class="tasks-section">
+  <div class="container">
+<div class="plus">
+  <i class="bi bi-patch-plus-fill"></i>
+</div>
+  </div>
+</section>
+<!-- start tasks section -->
     </div>
-    <!-- end form -->
+   
     <!-- start footer -->
     <footer>
       Made with &#x2764; By <a href="https://www.instagram.com/rahma.bouazza/">Rahma</a>
